<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="ST_ParserInternalState" Id="{ab017140-f9c9-488e-a77f-7de05466f020}">
    <Declaration><![CDATA[TYPE ST_ParserInternalState :
STRUCT
    nBufferSize             : UDINT;                        // Size of the current buffer
    nBufferPos              : UDINT;                        // The position within the current buffer (i.e. the next byte to read)
    nLastTag                : UDINT;                        // The last tag we read. 0 indicates we've read to the end of the stream (or haven't read anything yet).
    nNextTag                : UDINT;                        //
    nRecursionDepth         : UDINT;                        // Current recursion depth
    nRecursionLimit         : UDINT := Param_PB.cRecursionLimit; 
    nSizeLimit              : UDINT := Param_PB.cMaxProtobufRawBuffer;
    nBufferSizeAfterLimit   : UDINT;                        // If we are currently inside a length-delimited block, this is the number of bytes in the buffer that are still available once we leave the delimited block.
    nCurrentLimit           : UDINT := GCL_PB.cSbhLimit;    // The absolute position of the end of the current length-delimited block (including totalBytesRetired).
    nTotalBytesRetired      : UDINT;                        // The total number of consumed before the start of the current buffer.
    bError                  : BOOL;                         // True if error occured.
    bDiscardUnknownFields   : BOOL;                         // When set to true, unknown fields will be discarded while parsing.
    bHasNextTag             : BOOL; 
    eParserErrorCode        : E_ParserErrorCode;            // 0 = no error, <> 0 = error
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>