<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="F_ReadRawByte" Id="{3b4ebf60-f147-42c7-b6d8-bc6dfd761b40}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION INTERNAL F_ReadRawByte : HRESULT
VAR_IN_OUT
    stCtx : ST_ParseContext;
END_VAR
VAR_OUTPUT
    nByte   : BYTE;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
IF stCtx.stState.nBufferPos >= stCtx.stState.nBufferSize THEN
    F_ReadRawByte := F_ParseError(stCtx, E_ParserErrorCode.TruncatedMessage);
    RETURN;
END_IF

nByte := PBYTE_TO_BYTE(stCtx.stBuffer.pBuffer + stCtx.stState.nBufferPos);
stCtx.stState.nBufferPos := stCtx.stState.nBufferPos + 1;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>