<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <POU Name="F_ReadRawBytes" Id="{48071b53-e0c3-491f-85e3-655474ae17ff}" SpecialFunc="None">
    <Declaration><![CDATA[// Reads a fixed size of bytes from the input.
FUNCTION F_ReadRawBytes : HRESULT
VAR_IN_OUT CONSTANT
    aBuffer : ARRAY [*] OF BYTE;       
END_VAR
VAR_INPUT CONSTANT
    nLength : UDINT;
END_VAR
VAR_IN_OUT
    stState : ST_ParserInternalState;
    aBytes  : ARRAY[*] OF BYTE;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[F_ReadRawBytes := S_OK;

IF nLength > stState.nBufferSize - stState.nBufferPos THEN
    F_ReadRawBytes := stState.eParserErrorCode := E_ParserErrorCode.TruncatedMessage;
    stState.bError := TRUE;
    RETURN;  
END_IF

IF nLength > TO_UDINT(UPPER_BOUND(aBytes, 1)) THEN
    F_ReadRawBytes := stState.eParserErrorCode := E_ParserErrorCode.NotEnoughMem;
    stState.bError := TRUE;
    RETURN;      
END_IF

MEMCPY(destAddr:= ADR(aBytes[LOWER_BOUND(aBytes,1)]), srcAddr:= ADR(aBuffer[stState.nBufferPos]), n:=  nLength);
stState.nBufferPos := stState.nBufferPos + nLength;]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>